--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,7 +1,7 @@
 .app {
-    margin: 30px auto;
-    max-width: 600px;
+    margin: 40px auto;
+    padding: 0 15px;
+    max-width: 876px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
 }
