--- a/src/components/employees-list/employees-list.css
+++ b/src/components/employees-list/employees-list.css
@@ -1,5 +1,15 @@
 .app-list {
-    padding: 20px;
-    background: rgb(104, 104, 247);
+    margin: 0;
+    padding: 10px 30px 40px 30px;
     color: #fff;
+    background: #6451D9;
+    border-radius: 0 0 25px 25px;
+    margin-bottom: 28px;
 }
+
+@media (max-width: 660px) {
+    .app-list {
+        padding: 10px 15px 25px 15px;
+    }
+}
+
