--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -1,5 +1,33 @@
 .search-panel {
-    padding: 20px;
-    background: rgb(104, 104, 247);
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
+    padding: 40px 30px 16px 30px;
+    border-radius: 25px 25px 0 0;
+    background: #6451D9;
     color: #fff;
+    margin-top: 28px;
+}
+
+.search-panel input {
+    padding: 0 25px;
+    height: 52px;
+    width: calc(100% - 50px);
+    max-width: 640px;
+    border-radius: 25px;
+    background: #FFF;
+    color: #6C6C6C;
+    font-size: 24px;
+    font-weight: 400;
+    border: none;
+}
+
+@media (max-width: 660px) {
+    .search-panel input {
+        font-size: 20px;
+        height: 40px;
+    }
+    .search-panel  {
+        padding: 25px 15px 10px 15px;
+    }
 }
